--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -21,7 +21,8 @@ jobs:
     steps:
       - uses: actions/setup-ruby@v1
         with:
-          ruby-version: '2.6.x'
+          # ruby-version: '2.6.x'
+          ruby-version: '3.3'
 
       - name: Checkout
         uses: actions/checkout@v2
