--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -12,28 +12,53 @@ on:
     branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+# jobs:
+#   # This workflow contains a single job called "build"
+#   build:
+#     # The type of runner that the job will run on
+#     runs-on: ubuntu-latest
   
-    steps:
-      - uses: actions/setup-ruby@v4
-        with:
-          # ruby-version: '2.6.x'
-          ruby-version: '3.3'
+#     steps:
+#       - uses: actions/setup-ruby@v4
+#         with:
+#           # ruby-version: '2.6.x'
+#           ruby-version: '3.3'
 
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+#       - name: Checkout
+#         uses: actions/checkout@v2
+#         with:
+#           fetch-depth: 0
 
-      # Runs Publish & Lastmod script
-      - name: Publish script
-        run: |
-          bash tools/publish.sh
+#       # Runs Publish & Lastmod script
+#       - name: Publish script
+#         run: |
+#           bash tools/publish.sh
           
-      - name: Lastmod script
-        run: |
-          bash _scripts/sh/dump_lastmod.sh        
+#       - name: Lastmod script
+#         run: |
+#           bash _scripts/sh/dump_lastmod.sh        
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        ruby: ["3.1", "3.2", "3.3"]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # for posts's lastmod
+
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby }}
+          bundler-cache: true
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: latest
