--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -5,9 +5,9 @@
 #  MIT Licensed
 
 - type: github
-  icon: "fab fa-github-alt"
+  icon: "fa-brands fa-github"
 - type: twitter
-  icon: "fab fa-twitter"
+  icon: "fa-brands fa-x-twitter"
 - type: email
   icon: "fas fa-envelope"
   noblank: true # open link in current tab
