--- a/_data/share.yml
+++ b/_data/share.yml
@@ -10,7 +10,7 @@ label: "Share"
 
 platforms:
   - type: Twitter
-    icon: "fab fa-twitter"
+    icon: "fa-brands fa-x-twitter"
     link: "https://twitter.com/intent/tweet?text=TITLE&url=URL"
   - type: Facebook
     icon: "fab fa-facebook-square"
